Fix contact image not responsive

--- a/style/main.css
+++ b/style/main.css
@@ -281,8 +281,9 @@ section#contacts .icons.bottom svg {
 
     section#contacts .container img {
         object-fit: cover;
-        width: 400px;
+        width: 100%;
         height: 600px;
+        overflow: auto;
     }
 
     section#contacts .info h2,
